--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            height: 100%;
         }
     </style>
 </head>
