fix iframe height in firefox

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     
 
-    <iframe src="http://docs.closeio.apiary.io/" style="width: 100%; border: 0; height: 100%;">
+    <iframe src="http://docs.closeio.apiary.io/" style="width: 100%; border: 0; height: 100%; position: absolute;">
         <a href="http://docs.closeio.apiary.io/">See our API docs here</a>
     </iframe>
     
